# flexllama

./: .dockerignore  .gitattributes  .gitignore  CONFIGURATION.md  DOCKER_PLAN.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda.buildkit  Dockerfile.cuda.fixed  Dockerfile.cuda.windows  Dockerfile.vulkan  Dockerfile.windows  MANIFEST.in  OPENCLAW_ANALYSIS.md  QUICKSTART.md  README.md  config_example.json  docker-compose.yml  docker-start.ps1  docker-start.sh  main.py  pyproject.toml  usage-windows.md
backend/: __init__.py  api.py  config.py  config_example.json  gpu_metrics.py  runner.py
docker/: README.md  build-cuda-no-cache.sh  config-gpu.json  config.json  config.openclaw.json  config.qwen3.cpu.json  config.qwen3.unified.json  config.vulkan.json  debug-mtmd.sh  docker-compose.openclaw.yml  entrypoint-windows.sh  entrypoint.sh  fix-mtmd.sh
docs/providers/: flexllama.md
frontend/: __init__.py  dashboard-gpu.js  dashboard-runners.js  index.html  script.js  styles.css
tests/: test_all_models.py  test_basic.py  test_gpu_metrics.py  test_model_switching.py
